# mbukanji-valhalla-mobile

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  STANDALONE_REPO_CHECKLIST.md  golden-routes.json  package.json  parity-tolerance.json  pnpm-lock.yaml  react-native.config.js  toolchain.lock.json  tsconfig.json
.github/workflows/: publish.yml
android/: build.gradle  proguard-rules.pro
android/src/main/cpp/: CMakeLists.txt  EngineManager.cpp  EngineManager.h  ValhallaEngineImpl.cpp  ValhallaEngineImpl.h  ValhallaJni.cpp
android/src/main/java/com/jansoft/mbukanji/valhalla/: ValhallaModule.java  ValhallaPackage.java
ios/: EngineManagerBridge.h  EngineManagerBridge.m  MbukanjiValhallaMobile.podspec  ValhallaEngineBridge.h  ValhallaEngineBridge.mm  ValhallaModule.m
src/: index.ts  normalizeRouteResult.ts  packSchema.test.ts  packSchema.ts  parityCompare.test.ts  parityCompare.ts  types.ts
